[package]
name = "lfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bigdecimal = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
easy-scraper = "0.2.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
